--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,11 +29,15 @@ a{
 ul{
     padding: 0;
 }
+h2{
+    font-size: 40px;
+    font-weight: 600;  
+}
 h6{
     color: #008ED6;
     text-transform: uppercase;
-    font-size: 14px;
-    font-weight: 500;
+    font-size: 16px;
+    font-weight: 600;
 }
 .btn-all{
     color: #fff;
@@ -42,7 +46,7 @@ h6{
     border-radius: 3px;
     font-size: 14px;
     font-weight: 300;
-    padding: 15px;
+    padding: 15px 20px;
     transition: all 0.3s ease-in-out;
 } 
 .btn-all:hover{
@@ -105,10 +109,6 @@ header{
     right: 0;
 } 
 /* Hero section */ 
-.banner{
-/*      margin-top: 5%;  */
-
-}
 .hero-row{
     min-height: 75vh;
 }
@@ -121,7 +121,8 @@ h1{
 p{
     color: #999999;
     margin-bottom: 25px;
-    padding-right: 66px; 
+    padding-right: 66px;
+    font-size: 18px; 
 }
 .hero-section li{
     display: inline-block;
@@ -202,42 +203,42 @@ section:hover span::after{
 .feature-section{
     border-bottom:  1px solid #e0e0e0;
 }
-/* Device CSS */
-.device-section{
+/* About CSS */
+.about-section{
     padding: 5.5% 0 2.5%;
 }
-.device-section img{
+.about-section img{
     width: 100%;
     transition: all 0.3s ease-in-out;
 }
-.device-section img:hover{
+.about-section img:hover{
     transform: scale(1.1, 1.1);
 }
-.device-title{
+.about-title{
     margin-top: 3%;
 }
-.device-title span,
-.customize-content span{
+.about-title span,
+.device-content span{
     margin: 4% 0 10%;
     text-align: right;
 }
-.device-title span::before, 
-.customize-content span::before{
+.about-title span::before, 
+.device-content span::before{
     left: 0;
 }
-.device-title span::after,
-.customize-content span::after{
+.about-title span::after,
+.device-content span::after{
     right: 93.6%;
 }
-.device-content p{
+.about-content p{
     margin: 25px 0 25px;
     padding-right: 88px;
 }
-.device-content ul li{
+.about-content ul li{
     list-style: none;
     margin-bottom: 1.5%;
 }
-.device-content ul li .fa-solid{
+.about-content ul li .fa-solid{
     width: 20px;
     height: 20px;
     text-align: center;
@@ -245,17 +246,17 @@ section:hover span::after{
     line-height: 20px;
     color: #008ed6;
 }
-.device-content ul li h5{
+.about-content ul li h5{
     display: inline-block;
     margin-left: 10px;
     font-size: 18px;
 }
-/* Customize CSS */
-.customize-section{
+/* Device CSS */
+.device-section{
     background: #f2f2f2;
     padding: 2.3% 0 1.5%;
 }
-.customize-section p{
+.device-section p{
     padding-right: 5px; 
 }
 .iPhone-image{
@@ -263,6 +264,232 @@ section:hover span::after{
     transition: all 0.3s ease-in-out;
 }
 .iPhone-image:hover{
- transform: scale(1.1, 1.1);
+    transform: scale(1.1, 1.1);
 }
-
+/* Testimonials CSS */
+.testimonials-section{
+    background: url(../img/testimonial.png) no-repeat center top;
+    background-size: cover;
+    padding: 4% 0 2%;
+}
+.testimonials-section h2{
+    color: #fff;
+}
+.slide-item{
+    padding: 5% 0 2%;
+}
+.slide-item p{
+    font-size: 25px;
+    color: #fff;
+}
+.slide-man{
+    display: flex;
+}
+.slide-man img{
+    width: 60px !important;
+}
+.slide-intro{
+    padding-left: 2%; 
+    padding-bottom: 10%;
+}
+.slide-intro p{
+   font-size: 18px; 
+   font-weight: 300;
+   margin-bottom: 7px;
+}
+.slide-intro h6{
+   color: #fff;
+}
+.owl-dots{
+    display: flex;
+    justify-content: center; 
+    margin-top: 8%;
+}
+.owl-dots .owl-dot span{
+    width: 10px;
+    height: 10px;
+    background: #transparent; 
+    border: 1px solid #999999;
+    display: block;
+    margin: 3px 15px;
+    border-radius: 50%;
+}
+.owl-dots .active span{
+    width: 18px;
+    height: 18px;
+    background: #fff; 
+}
+/* Add CSS */
+.add-section{
+    background: #000;
+    padding: 4% 0 3%; 
+}
+.add-section h2{
+    color: #fff;
+    font-size: 35px;
+}
+.add-section span{
+    font-weight: 300;
+    color: #999999;
+}
+.add-section ul li{
+    display: inline-block;
+    list-style: none;
+}
+/* Pricing CSS */
+.pricing-section{
+    padding: 6% 0;  
+}
+.pricing-section .price-tbl{
+    border: 1px solid #e0e0e0;
+    padding: 8% 0;
+    text-align: center;
+}
+.price-tbl h2{
+    text-transform: uppercase;
+    font-size: 33px;
+    font-weight: 700;
+    margin-bottom: 5%;
+    transition: all 0.5s ease-in-out;
+}
+.price{
+    border-top: 1px solid #e0e0e0;
+    border-bottom: 1px solid #e0e0e0;
+}
+.price h1{
+    color: #000;
+    font-size: 75px;
+    font-weight: 600;
+    margin-bottom: 0;
+    transition: all 0.1s ease-in-out;
+}
+.price h1 sup{
+   font-size: 40px; 
+}
+.price-tbl .price p{
+    font-size: 20px;
+    padding: 0 !important;
+    margin-bottom: 5% !important;
+    transition: all 0.5s ease-in-out;
+}
+.price-tbl p{
+    padding-right: 0;
+    font-size: 20px;
+    padding: 15% 10%;
+    margin-bottom: 0 !important;
+}
+.price-tbl .button{
+    color: #008ED6;
+    font-weight: 700;
+    font-size: 17px;
+    text-transform: uppercase;
+    border: 1px solid #e0e0e0;
+    border-radius: 3px;
+    padding: 20px 47px;
+    transition: all 0.5s ease-in-out;
+}
+.price-tbl:hover h2{
+    color: #008ED6;
+}
+.price-tbl:hover .price{
+    background: #008ED6;
+}
+.price-tbl:hover .price h1{
+    color: #fff;
+}
+.price-tbl:hover .price p{
+    color: #fff;
+}
+.price-tbl:hover .button{
+    color: #fff;
+    border: 1px solid #008ED6;
+    background: #008ED6;
+}
+/* Contact CSS */
+.contact-section{
+    background: #f2f2f2;
+    padding:4% 0 23%;
+    position: relative;
+}
+.contact-content{
+    text-align: center;
+}
+.contact-content .icon-border i{
+    font-size: 35px;
+    line-height: 100px; 
+    color: #008ED6;
+    transition: all 0.3s ease-in-out;  
+}
+.contact-content:hover i{
+    transform: scale(1.3,1.3);
+}
+.contact-content p{
+    margin-bottom: 0 !important;
+    padding: 0 10%;
+}
+.location p{
+    padding: 0 30%;
+}
+/* From CSS */
+.form-box{
+    background: #000;
+    padding: 5% 3% 3%;
+    position: absolute; 
+    bottom: -10%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.form-box input{
+    background: transparent;
+    border: 1px solid #444348;
+    box-shadow: none;
+    padding: 10px;
+} 
+.form-box textarea{
+    background: transparent;
+    border: 1px solid #444348;
+    box-shadow: none;
+    outline: none;
+    padding: 10px;
+} 
+.form-box input[type="submit"]{
+    color: #fff;
+    background: #008ED6;
+    font-weight: 700;
+    font-size: 17px;
+    text-transform: uppercase;
+    border: 1px solid #008ED6;
+    border-radius: 3px;
+    padding: 10px 30px;
+    transition: all 0.3s ease-in-out;
+    display: block;
+    margin-left: auto;
+} 
+.form-box input[type="submit"]:hover{
+    background: #005581;
+    border: 1px solid #005581;
+}
+/* Footer CSS */
+footer{
+    background: #000; 
+    padding: 3%;
+    text-align: center;
+}
+footer li{
+    list-style: none;
+    display: inline;
+    padding-right: 5%;
+    font-size: 18px;
+}
+footer li a{
+    color: #444348;
+    transition: all 0.3s ease-in-out;
+}
+footer p{
+    text-transform: uppercase;
+    margin-bottom: 0 ;
+    color: #444348;
+}
+footer li a:hover{
+    color: #008ED6;
+}
